--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,70 +14,9 @@
  *= require_self
  */
 
-a .entry-mid {
-  color: black;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  }
-
-td, th {
-  padding: 0.5rem;
-  text-align: left;
-  vertical-align: center;
-  border-bottom: 1px solid lightgray;
-  }
-
-.avatar {
-  border-radius: 50%
-  }
-
-
-h2 {
-  font-size: 14pt;
-  font-weight: bold;
-  margin-top: 10pt;
-  margin-bottom: 5pt;
-}
-
-h3 {
-  color: #585858;
-  font-size: 24pt;
-  font-weight: bold;
-  text-align: center;
-  margin-top: 5pt;
-  margin-bottom: 5pt;
-  padding: 0;
-/*      text-align: center;*/
-}
-
-h4 {
-  font-size: 10pt;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  list-style-type: none;
-  padding-left: 10px;
-}
-
-
-/*    .card {*/
-/*      border: 1px rgba(150, 0, 50, 1) solid;*/
-/*      border-radius: 20px;*/
-/*      margin-bottom: 10px;*/
-/*      box-shadow: 2px 2px 5px 0 gray;*/
-/*      height: 100%;
-}*/
-
-
 .content-container {
   width: 1200px;
-  height: 1000px;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
 }
@@ -86,15 +25,11 @@ ul {
   float: left;
   width: 60%;
   height: 100%;
-/*  border: 1px red dotted;*/
 }
-
 
 .column7 {
   float: left;
   width: 70%;
-  height: 100%;
-/*  border: 1px red dotted;*/
 }
 
 .column3-padding {
@@ -137,7 +72,6 @@ ul {
   float: left;
   width: 100%;
   height: 500px;
-/*  border: 1px #BDBDBD dotted;*/
   border-radius: 20px;
   margin-bottom: 10px;
 }
@@ -188,7 +122,6 @@ ul {
   width: 65%;
   height: 100%;
   padding-top: 15px;
-/*  border: 1px #BDBDBD dotted;*/
 }
 
 .details-description-container {
@@ -196,19 +129,16 @@ ul {
   width: 75%;
   height: auto;
   padding-right: 20px;
-/*  border: 1px #BDBDBD dotted;*/
 }
 
 .details-amenities-container {
   float: left;
   width: auto;
   height: auto;
-/*  border: 1px #BDBDBD dotted;*/
 }
 
 .details-contact-container {
   float: left;
-/*  border: 1px #BDBDBD dotted;*/
   text-align: center;
   padding-left: 20px;
   padding-right: 20px;
@@ -280,11 +210,6 @@ ul {
 .image-hero {
   height: auto;
   width: 100%;
-}
-
-* {
-  box-sizing: border-box;
-  /*border: thin red solid;*/
 }
 
 .entry-edit-left {
@@ -392,3 +317,35 @@ ul {
     color: darkgray;
 }
 
+a .entry-mid {
+  color: black;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 10px;
+}
+
+h2 {
+  font-size: 14pt;
+  font-weight: bold;
+  margin-top: 10pt;
+  margin-bottom: 5pt;
+}
+
+h3 {
+  color: #585858;
+  font-size: 24pt;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 5pt;
+  margin-bottom: 5pt;
+  padding: 0;
+}
+
+h4 {
+  font-size: 10pt;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
