--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,17 +18,17 @@
     <% end %>
 
     <div class="form-group">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, autocomplete: "off", :class => "form-control" %>
+      <%= f.label :password, "New Password"%>
+      <%= f.password_field :password, autocomplete: "off", :class => "form-control", :placeholder => "Minimum 8 characters" %>
     </div>
 
     <div class="form-group">
-      <%= f.label :password_confirmation %><br />
+      <%= f.label :password_confirmation, "Confirm New Password" %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+      <%= f.label :current_password %>
       <%= f.password_field :current_password, autocomplete: "off", :class => "form-control" %>
     </div>
 
